# CG-Paper-Presentation

./: .gitignore  README.md
practical3/: CMakeLists.txt
practical3/shaders/: phasor_noise.glsl  xtoon_frag.glsl
practical3/src/: main.cpp
shaders/: buffer_a.glsl  buffer_try.glsl  gabor_noise.glsl  phase_field.glsl  phasor_noise.glsl  phasor_noise_v2.glsl
src/: main.cpp
